Fix line-height issue on h2 causing extra spacing for mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,7 +19,6 @@ h2 {
   font-style: normal;
   font-weight: 600;
   font-size: 1.5em;
-  line-height: 3em;
   padding: 0px 20px 0px 20px;
   margin-bottom: 1em;
 }
